[package]
name = "thesaurust"
version = "0.1.0"
edition = "2021"
description = "A command-line interface to Merriam-Webster's collegiate thesaurus."
license = "MIT"
license-file = "LICENSE.txt"
readme = "README.md"
keywords = ["thesaurus", "command-line", "dictionary", "cli"]
categories = ["command-line-utilities"]
repository = "https://github.com/Bobby-Huggins/thesaurust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
console = { version = "0.15.5", features = ["windows-console-colors"] }
dialoguer = { version = "0.10.3", features = ["fuzzy-select", "completion", "history"] }
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_derive = "1.0.154"
serde_json = "1.0.94"
textwrap = { version = "0.16.0", features = ["hyphenation", "terminal_size"] }
